--- a/docs/xaringan/01_intro.Rmd
+++ b/docs/xaringan/01_intro.Rmd
@@ -12,13 +12,13 @@ output:
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
+      ratio: '16:9'
 ---
 
+background-image: url(../images/classroom.jpg)
+class: fitbackground
+
 # Welkom!
-
-- item
-- item
-
 
 
 
@@ -26,12 +26,28 @@ output:
 
 # Waarom R?
 
+
+- Flexibiliteit: als je het kunt bedenken, kan het in R
+- Veel gebruikers = veel web resources / help
+- Makkelijker te leren dan een 'volledige' programmeertaal
+- Sterk in visualisatie, rapportage
+- Zeer groot aanbod 'packages' (uitbreiding)
+- Rstudio: geavanceerd en gratis
+- Werkt op Windows/Mac/Linux - zonder aanpassingen
+- Gratis!
+
+
+
+.center[
+  ![](../images/letterr50.png)
+]
+
+
+
 ---
 
 background-image: url(../images/trainschedule.png)
-background-size: 100%;
-class: train
-
+class: fitbackground
 
 # Rooster
 
@@ -39,6 +55,7 @@ class: train
 ---
 # Rooster
 
+.pull-left[
 ## Dag 1
 
 -  Aan de slag met R en Rstudio
@@ -46,32 +63,51 @@ class: train
 
 ## Dag 2
 
--  Data Skills - Deel 2
--  Reporting: rmarkdown
--  Statistics
+- Data Skills - Deel 2
+- Reporting: rmarkdown
+- Statistics
 
 ## Dag 3
 
--  Programmeren
--  Web Services
--  Extras
+- Programmeren
+- Web Services
+- Extras
+
+]
+
+.pull-right[
+
+  ![](../images/trainschedule.png)
+]
 
 ---
 
-# Waarom R?
+background-image: url(../images/shanghairoads.jpg)
+class: fitbackground
 
-- 100% Flexibiliteit
+# Zoek je eigen weg!
 
+---
 
+# De syllabus
+
+- Het gaat om de voorbeelden!
+
+- Probeer zelf voorbeelden aan te passen, en voor inspiratie:
+.center[![](../images/trythis.png)]
+
+- De Exercises zorgen ervoor dat je de belangrijke skills begrijpt:
+.center[![](../images/exercises.png)]
 
 ---
 
 # Resources
 
-- remkoduursma.github.io/pronexus
-- remkoduursma.github.io/learningguidetor
+- Website met links, presentaties: [remkoduursma.github.io/pronexus]()
+- E-versie van syllabus: [remkoduursma.github.io/learningguidetor]()
 
-.left[![](../images/caution.png)]
+.center[![](../images/learningguide.png)]
+
 
 
 
